fix: Align lang-switch icon on front

--- a/src/front/styles/_loader.scss
+++ b/src/front/styles/_loader.scss
@@ -37,3 +37,5 @@
 .show {
 	visibility: visible!important;
 }
+
+#footer-menu { line-height:1.8 }
